<resources>
    <string name="app_name">Control de servicios - Oficina de medios audiovisuales</string>
    <string name="tabItem_ingresar">Ingresar</string>
    <string name="tabItem_crear_cuenta">Crear cuenta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tab_text_1">Acceder</string>
    <string name="tab_text_2">Registrarse</string>
    <string name="imageView_logo_uni">logo_uni</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageView_Logo">Logo</string>
    <string name="textInput_usuario">usuario</string>
    <string name="textInput_contrasena">contraseña</string>
    <string name="button_acceder">Acceder</string>
    <string name="textview_registrarse">Registrarse</string>
    <string name="textInput_contrasena_confirmar">confirmar contraseña</string>
    <string name="button_registrarse">Registrarse</string>
    <string name="correo_text">correo</string>
    <string name="button_logout">Cerrar sesión</string>

    <string name="correo"><font color='blue'>Correo</font>></string>

    <string name="cerrar_sesion"><font color='blue'>Cerrar Sesion</font>></string>

    <string name="todo">TODO</string>

</resources>