<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <ImageView
        android:id="@+id/imageView_LogoCrear"
        android:layout_width="233dp"
        android:layout_height="209dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/imageView_Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_uni__1___1_" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_usuarioC"
        android:layout_width="355dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:boxBackgroundColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_LogoCrear">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/textInput_usuario" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_contraseñaC"
        android:layout_width="355dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        app:boxBackgroundColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_usuarioC"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/textInput_contrasena"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_contraseñaC_Confirmar"
        android:layout_width="355dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        app:boxBackgroundColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_contraseñaC"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/textInput_contrasena_confirmar"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_registrarse"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:background="#000000"
        android:text="@string/button_registrarse"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/azul_uni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_contraseñaC_Confirmar" />
</androidx.constraintlayout.widget.ConstraintLayout>