<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistrarseActivity">

        <ImageView
            android:id="@+id/imageView_Logo"
            android:layout_width="233dp"
            android:layout_height="209dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="90dp"
            android:contentDescription="@string/imageView_Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_proyecto_final_2__1_" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_usuario"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="28dp"
            app:boxBackgroundColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_Logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_correoLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/correo_text"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_contraseña"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="28dp"
            app:boxBackgroundColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_usuario"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_contrasenaLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/textInput_contrasena"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Acceder"
            android:layout_width="280dp"
            android:layout_height="43dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="67dp"
            android:background="#000000"
            android:text="@string/button_acceder"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/azul_uni"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_contraseña" />

        <TextView
            android:id="@+id/textView_registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="80dp"
            android:text="@string/textview_registrarse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Acceder" />


        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_registrarse"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>